<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/layout"
    android:background="@drawable/gradient_list"
    tools:context=".activities.ResetPasswordActivity">

    <include
        android:id="@id/toolbar"
        layout= "@layout/bar_layout"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/send_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/enter_email"
            android:layout_marginTop="70dp"
            />

        <Button
            android:id="@+id/btn_reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_reset"
            android:textColor="@color/colorWhite"
            style="@style/Widget.Button.Clear"
            android:layout_marginTop="20dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:textColor="@color/colorWhite"
            android:text="@string/reset_info"
            />

    </LinearLayout>

</LinearLayout>