<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:orientation="vertical"
    tools:context="fragments.HomeFragment"
    android:background="@android:color/transparent">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:padding="20dp"
        android:background="@android:color/transparent">

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/welcome"
            android:textColor="@color/colorWhite"
            android:textSize="20dp"/>
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/welcome"
            android:text="@string/app_title"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorWhite"
            android:textSize="90sp"
            android:fontFamily="sans-serif"
            android:textFontWeight="200"/>

        <TextView
            android:id="@+id/main_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/title"
            android:text="@string/app_name"
            android:textColor="@color/colorWhite"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="75dp"
            android:layout_below="@+id/main_title"
            android:gravity="center_horizontal"
            android:text="@string/welcome_message"
            android:textColor="@color/colorWhite"
            android:textSize="20dp"/>
        <TextView
            android:id="@+id/message2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/message"
            android:gravity="center_horizontal"
            android:text="@string/welcome_message2"
            android:textColor="@color/colorWhite"
            android:textSize="20dp"/>

        <Button
            android:id="@+id/btn_record"
            style="@style/Widget.Button.Clear"
            android:layout_width="210sp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="Add A Sound"
            android:textColor="@color/colorWhite"
            android:layout_below="@+id/main_title"
            />
        <Button
            android:id="@+id/btn_detect"
            style="@style/Widget.Button.Clear"
            android:layout_width="210sp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="Detect Sounds"
            android:textColor="@color/colorWhite"
            android:layout_below="@+id/btn_record"
            />

    </RelativeLayout>

</RelativeLayout>